--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root {
-  --primary-color: #0b866d;
-  --secondary-color: #d5c863;
-  --third-color: #c7b356;
-  --background-color: #f4f4f4;
-  --text-color: #0b866d;
+  --primary-color: #0b866d; /* Verde */
+  --secondary-color: #f4f4f4; /* Cinza claro */
+  --third-color: #0c705c; /* Tom neutro */
+  --background-color: #ffffff; /* Branco */
+  --text-color: #0b866d; /* Verde */
+  --hover-color: #0c705c; /* Verde mais claro */
 }
 
 /* Estilos para a scrollbar */
@@ -16,12 +17,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--third-color);
+  background-color: #c9c9c9;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--primary-color);
+  background-color: #a7a7a7;
 }
 
 /* Reset padrão */
@@ -38,73 +39,105 @@ body {
   background-color: var(--background-color);
 }
 
-/* Header e Navegação */
+/* Estilo da Navbar */
 header {
-  background: #ffffff;
-  color: var(--primary-color);
-  padding: 0.5rem 2rem;
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid var(--secondary-color);
+  align-items: center;
+  padding: 1rem; /* Ajustado para um cabeçalho menor */
+  background-color: var(--background-color); /* Branco */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
 }
 
 nav {
   display: flex;
   align-items: center;
-  gap: 20px;
-}
-
-.logo img {
-  max-height: 80px;
 }
 
 nav ul {
   display: flex;
+  gap: 1rem;
+}
+
+nav ul li {
   list-style: none;
-  gap: 20px;
 }
 
 nav ul li a {
-  color: var(--primary-color);
+  color: var(--text-color);
   text-decoration: none;
-  padding: 6px 12px;
-  font-size: 1.2rem;
-  border-radius: 1rem;
-  transition: 0.3s ease;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
 }
 
 nav ul li a:hover {
-  background: var(--secondary-color);
-  color: var(--background-color);
+  color: var(--third-color);
+}
+
+/* Estilo do ícone do menu hambúrguer */
+.hamburger {
+  display: none; /* Ocultar no desktop */
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.hamburger span {
+  width: 30px;
+  height: 3px;
+  background-color: var(--text-color);
+}
+
+/* Navbar responsiva */
+.nav-links {
+  display: none; /* Ocultar o menu no celular */
+}
+
+.nav-links.active {
+  display: flex; /* Mostrar quando ativado */
+  flex-direction: column;
+  position: absolute;
+  top: 60px; /* Ajustar conforme necessário */
+  right: 0;
+  background-color: var(--background-color);
+  width: 100%;
+  padding: 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
+}
+
+.nav-links ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 /* Ícones de navegação */
 .icons {
   display: flex;
   gap: 30px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   justify-content: center;
   flex-wrap: wrap;
   transition: 0.3s ease;
 }
 
-.fa-solid:hover,
-.fa-regular:hover {
+.fa-heart:hover,
+.fa-bag-shopping:hover,
+.fa-user:hover {
   transform: scale(1.1);
-  color: var(--third-color);
+  color: var(--third-color); /* Tom neutro */
   cursor: pointer;
 }
 
 /* Hero Section */
 #hero {
   display: flex;
-  height: 60vh;
 }
 
 .hero-container {
   display: flex;
   width: 100%;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color); /* Verde */
 }
 
 .hero-image {
@@ -116,7 +149,6 @@ nav ul li a:hover {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 0rem 2rem 2rem 0rem;
 }
 
 .hero-text {
@@ -129,17 +161,18 @@ nav ul li a:hover {
   gap: 2rem;
   text-align: right;
   font-size: 3rem;
-  background-color: var(--secondary-color);
-  color: var(--text-color);
+  background-color: var(--primary-color); /* Verde */
+  color: var(--background-color); /* Branco */
 }
 
 .hero-text p {
   font-size: 1.5rem;
+  text-align: right;
 }
 
 .cta-button {
-  background: var(--text-color);
-  color: white;
+  background-color: #f4f4f4;
+  color: var(--primary-color);
   padding: 10px 30px;
   text-decoration: none;
   border-radius: 2rem;
@@ -148,24 +181,37 @@ nav ul li a:hover {
 }
 
 .cta-button:hover {
-  background: var(--third-color);
-  scale: 1.1;
+  background: var(--hover-color); /* Verde mais claro */
+  scale: 1.01;
+  color: #f1f1f1;
 }
 
 /* Layout Container */
 .container {
+  display: flex;
   max-width: 1100px;
   margin: 0 auto;
   padding: 1.5rem;
+  flex-direction: column;
+  align-items: center;
 }
+
+.icone-hero {
+  margin: 20px;
+  font-size: 4rem;
+}
+
+/* About Section */
 section#about {
-  opacity: 50%;
   position: relative;
   background-image: url(imgs/background-quemsomos.png);
   background-size: cover;
   background-position: center;
-  height: 300px; /* Ajuste a altura conforme necessário */
-  overflow: hidden; /* Garante que o blur não extravase */
+  height: 400px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 section#about::before {
@@ -175,42 +221,35 @@ section#about::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: inherit; /* Herda a imagem de fundo */
-  filter: blur(8px); /* Ajuste o valor do blur conforme necessário */
-  z-index: 0; /* Coloca o blur atrás do conteúdo */
-}
-
-section#about {
-  position: relative; /* Permite posicionar o container */
-  background-image: url(imgs/background-quemsomos.png);
-  background-size: cover;
-  background-position: center;
-  height: 400px; /* Aumente a altura conforme necessário */
-  overflow: hidden; /* Garante que o blur não extravase */
-  display: flex; /* Usar flexbox para centralização */
-  justify-content: center; /* Centraliza horizontalmente */
-  align-items: center; /* Centraliza verticalmente */
+  background: inherit; /* Usa a imagem de fundo da seção */
+  filter: blur(4px); /* Aplica um desfoque mais intenso */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.7
+  ); /* Escurece com uma camada preta semi-transparente */
+  z-index: 0;
 }
 
 .container-about {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); /* Fundo branco com transparência */
-  padding: 40px; /* Aumente o padding para dar mais espaço ao texto */
-  border-radius: 10px; /* Bordas arredondadas */
-  max-width: 600px; /* Limita a largura do container */
-  text-align: center; /* Centraliza o texto */
-  z-index: 1; /* Coloca o container acima do blur */
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 40px;
+  border-radius: 1rem;
+  max-width: 600px;
+  text-align: center;
+  z-index: 1;
+  margin: 5%;
 }
 
-/* Adicionando alinhamento vertical e horizontal */
 .container-about h2,
 .container-about p {
-  margin: 0; /* Remove margem padrão */
-  line-height: 1.5; /* Para melhor legibilidade */
+  margin: 0;
+  line-height: 1.2;
+}
+
+.container-about p {
+  font-size: 20px;
 }
 
 /* Sections */
@@ -224,7 +263,7 @@ section {
 section h2 {
   font-size: 2rem;
   text-align: center;
-  color: var(--primary-color);
+  color: var(--primary-color); /* Verde */
   grid-column: span 2;
   margin-bottom: 2rem;
 }
@@ -232,6 +271,44 @@ section h2 {
 section p {
   font-size: 1rem;
   text-align: center;
+}
+
+/* Serviços */
+#services {
+  background: url(https://organicosinbox.com.br/wp-content/themes/odin/assets/images/bg-blog.png);
+  padding: 2rem 1rem;
+}
+
+.services-grid {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  justify-content: center;
+}
+
+.service {
+  background: #ffffff; /* Branco */
+  color: var(--text-color); /* Verde */
+  padding: 20px;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.service:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+}
+
+.service h3 {
+  font-size: 1.6rem;
+  margin-bottom: 0.75rem;
+}
+
+.service p {
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 /* Products Section */
@@ -246,6 +323,13 @@ section p {
   margin: 10px;
   width: 23%;
   overflow: hidden;
+  transition: 0.3s ease;
+}
+
+.product:hover {
+  transform: scale(1.1);
+  color: var(--third-color); /* Tom neutro */
+  cursor: pointer;
 }
 
 .product img {
@@ -256,45 +340,29 @@ section p {
 }
 
 .product h2 {
-  font-size: 16px;
+  font-size: 1.5rem;
   margin-top: 10px;
+  color: var(--primary-color); /* Verde */
 }
 
-/* Services Section */
-#services,
-#contact {
-  background: url(https://organicosinbox.com.br/wp-content/themes/odin/assets/images/bg-blog.png);
-}
-
-.services-grid {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  justify-content: center;
-}
-
-.service {
-  color: var(--background-color);
-  background: var(--primary-color);
-  padding: 20px;
+.btn-produtor {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 15px 25px;
+  border: none;
   border-radius: 2rem;
-  text-align: center;
-  border: 4px solid var(--primary-color);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.service:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.service h3 {
-  font-size: 1.6rem;
-  margin-bottom: 0.75rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-top: 2rem;
+  transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Contact Section */
+section#contact {
+  background: url(https://organicosinbox.com.br/wp-content/themes/odin/assets/images/bg-blog.png);
+}
+
 .contact-container {
   display: flex;
   justify-content: space-between;
@@ -316,9 +384,8 @@ form {
   display: grid;
   gap: 10px;
   padding: 15px;
-  background: var(--background-color);
+  background: var(--background-color); /* Branco */
   border-radius: 8px;
-  border: 1px solid var(--secondary-color);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
@@ -326,14 +393,14 @@ form input,
 form textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid var(--primary-color);
+  border: 1px solid #c9c9c9; /* Cinza claro */
   border-radius: 6px;
   font-size: 0.9rem;
 }
 
 form button {
-  background: var(--primary-color);
-  color: white;
+  background: var(--primary-color); /* Verde */
+  color: #ffffff; /* Branco */
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -342,182 +409,122 @@ form button {
 }
 
 form button:hover {
-  background: #0a5721;
+  background: var(--hover-color); /* Verde mais claro */
+}
+
+form label {
+  font-size: 1rem;
+  color: var(--text-color); /* Verde */
 }
 
 /* Footer */
 footer {
-  background-color: var(--primary-color);
-  color: white;
+  background-color: var(--primary-color); /* Verde */
+  color: var(--background-color); /* Branco */
   text-align: center;
+  padding: 1rem;
+  font-size: 0.9rem;
 }
 
-.footer-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  padding: 20px;
-  align-items: center;
-}
-
-.footer-logo img {
-  max-width: 150px;
-}
-
-.footer-links,
-.footer-contact,
-.footer-social {
-  margin: 10px;
-}
-
-.footer-links h3,
-.footer-contact h3,
-.footer-social h3 {
-  margin-bottom: 10px;
-  font-size: 18px;
-}
-
-.footer-links ul,
-.footer-social ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.footer-links li,
-.footer-social li {
-  margin: 5px 0;
-}
-
-.footer-links a,
-.footer-social a {
-  color: #f1f1f1;
+footer a {
+  color: var(--background-color); /* Branco */
   text-decoration: none;
-  transition: color 0.3s ease;
+  margin: 0 10px;
 }
 
-.footer-links a:hover,
-.footer-social a:hover {
-  color: #f1a40a;
+footer a:hover {
+  text-decoration: underline;
 }
 
-.footer-social {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+footer ul {
+  list-style: none; /* Remove a decoração de lista */
+  padding: 0; /* Remove o preenchimento padrão */
+  margin: 0; /* Remove as margens padrão */
 }
 
-.footer-social ul {
-  display: flex;
-  gap: 15px;
-}
-
-.footer-bottom {
-  background-color: var(--secondary-color);
-  font-size: 1rem;
-  text-align: center;
-  padding: 10px 0;
+footer ul li {
+  margin-bottom: 0.5rem; /* Espaçamento entre itens da lista, se necessário */
 }
 
 /* Media Queries */
-@media (max-width: 768px) {
-  .logo {
-    font-size: 1.3rem;
+@media screen and (max-width: 768px) {
+  header {
+    padding: 0px;
+    flex-direction: row;
+    justify-content: space-around;
   }
 
   nav ul {
+    display: none;
     flex-direction: column;
-    gap: 8px;
+    gap: 1rem;
+  }
+  .icons {
+    content-visibility: hidden;
+  }
+  .hamburger {
+    display: flex;
   }
 
-  #hero h1 {
-    font-size: 2.3rem;
+  .hamburger.active + nav ul {
+    display: flex;
   }
 
-  #hero p {
-    font-size: 1.1rem;
+  .hero-container {
+    flex-direction: column;
   }
 
-  .cta-button {
-    padding: 8px 18px;
+  .hero-image,
+  .hero-text {
+    width: 100%;
   }
 
-  section h2 {
-    font-size: 1.8rem;
+  .hero-text {
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
   }
 
-  .services-grid {
-    grid-template-columns: 1fr;
-  }
-
-  footer {
-    padding: 20px;
-  }
-
-  .footer-container {
-    max-width: 1200px;
-    padding: 20px;
-  }
-
-  .footer-links,
-  .footer-contact,
-  .footer-social {
-    flex: 1;
-    margin: 0 auto 20px auto;
-    max-width: 300px;
-  }
-}
-
-@media (max-width: 480px) {
-  nav ul {
-    gap: 5px;
-  }
-
-  .logo img {
-    max-height: 40px;
-  }
-
-  #hero h1 {
+  .hero-text h1 {
     font-size: 2rem;
   }
 
-  #hero p {
-    font-size: 1rem;
-  }
-
-  .cta-button {
-    padding: 6px 16px;
+  .hero-text p {
+    text-align: center;
     font-size: 1rem;
   }
 
   .products {
+    display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .product {
-    width: 100%;
+    border: 2px solid;
+    border-radius: 2rem;
+    text-align: center;
+    overflow: hidden;
+    transition: 0.3s ease;
+    margin: 0px;
+    width: 90%;
   }
 
   .services-grid {
     grid-template-columns: 1fr;
   }
 
-  .service {
-    padding: 15px;
-    font-size: 1rem;
+  .service h3 {
+    font-size: 1.4rem;
   }
 
   .contact-container {
-    flex-direction: column;
+    display: block;
+    padding: 0px 5%;
   }
 
-  .footer-container {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .footer-links,
-  .footer-contact,
-  .footer-social {
-    margin-bottom: 20px;
+  .contact-text {
+    padding-right: 0;
+    margin-bottom: 2rem;
   }
 }
